# worldcup-2026-prediction

./: .gitignore  CLAUDE.md  README.md  generate_thumbnail.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_output.txt
.code-generator/: analyze-report.md  issue_elo_body.md  issue_poisson_body.md  phase6_5_spec.json  requirements.md  state.json
.code-generator/memories/: cycle-repo-map.md  cycle-summary.md  project-plan.md
config/: default.toml  playoff_2026.toml  playoff_2026_live.toml
output/: _pooled.json
tests/: __init__.py  conftest.py  test_backtest.py  test_bracket_builder.py  test_bracket_slots.py  test_bracket_viz.py  test_builders.py  test_classifiers.py  test_cleaner.py  test_cli.py  test_cli_cycle5.py  test_client.py  test_config.py  test_config_cycle5.py  test_config_elo_poisson_issue30.py  test_config_issue43.py  test_crosswalk.py  test_crosswalk_spec.py  test_distributions.py  test_dixon_coles_issue32.py  test_dixon_coles_issue33.py  test_elo.py  test_elo_issue31.py  test_evaluation_metrics.py  test_feature_builder.py  test_features_build.py  test_features_confederation.py  test_features_init.py  test_features_integration.py  test_features_public_api.py  test_features_timeaware.py  test_features_wc2026.py  test_forecast_plots.py  test_forecast_seed_regression.py  test_game.py  test_group_stage.py  test_helpers_time_aware.py  test_hybrid_model.py  test_hybrid_ordered_logit_config.py  test_issue39_dataset_ac.py  (+25 more)
todo/: todo.md
worldcup_playoff/: __init__.py  __main__.py  cli.py  cli_cycle5.py  config.py  pipeline.py  types.py
(+45 files in other folders)
