[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldcup-2026-prediction"
version = "1.0.0"
description = "Monte Carlo simulation of FIFA World Cup 2026 knockout outcomes using ML classifiers"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Silvio Baratto" }]
readme = "README.md"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "fitter>=1.6",
    "matplotlib>=3.7",
    "requests>=2.31",
    "seaborn>=0.12",
    "typer[all]>=0.9",
    "pydantic>=2.0",
    "joblib>=1.3",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy", "hypothesis>=6.0"]

[project.scripts]
worldcup-playoff = "worldcup_playoff.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["worldcup_playoff"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
